SONARPY-1216 PR Analysis: Avoid running regular rules for transitively impacted files (#1329)